* 2013-12-17 - thorben.betten@open-xchange.com

 - Fix for bug 30358: Modified HTTP-API call-back pattern to surround injected string with quotes while injected string gets quote-escaped before
 - Fix for bug 30217: Ensure context identifier is contained in login mappings

* 2013-12-17 - tobias.friedrich@open-xchange.com

 - Fix for bug 30359: Configure SAX builder to not resolve external entities

* 2013-12-17 - jan.bauerdick@open-xchange.com

 - Fix for bug 30254: Added column names to SQL statement

* 2013-08-14 - thorben.betten@open-xchange.com

 - Fix for bug 26597: Apply default charset if multipart/form-data POST request misses mail-safe encoding for non-ascii words

* 2013-10-22 - thorben.betten@open-xchange.com

 - Fix for bug 29412: Escape HTML content prior to writing to output writer

* 2013-10-10 - martin.herfurth@open-xchange.com

 - Fix for bug 29315: Avoid bad where condition

* 2013-10-08 - thorben.betten@open-xchange.com

 - Fix for bug 29136: Do not change session's IP address in case IP-check is turned off and non-white-listed client

* 2013-10-07 - thorben.betten@open-xchange.com

 - Fix for bug 29147: Detect possibly harmful HTML content in image files and force attachment download then

* 2013-09-17 - thorben.betten@open-xchange.com

 - Fix for bug 28770: Once again -- Removed &nbsp; entities from html2text converted plain text

* 2013-09-10 - thorben.betten@open-xchange.com

 - Fix for bug 28741: Orderly close opened 'Base64OutputStream'
 
* 2013-09-04 - thorben.betten@open-xchange.com

 - Fix for bug 28673: Removed the warning on password change that rather acts as information message

* 2013-09-03 - dennis.sieben@open-xchange.com

 - Fix for bug 28658: Removed special handling

* 2013-09-03 - thorben.betten@open-xchange.com

 - Fix for bug 28635: Sanitize HTML content from calendar printing

* 2013-09-02 - thorben.betten@open-xchange.com

 - Fix for bug 28642: Apply sanitizing to text/xml MIME types, too
